application/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-portal
  labels:
    app: web-portal
    app.kubernetes.io/name: web-portal
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: frontend-team
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: web-portal
